# rbot

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/instagram/: instagram.rs  mod.rs
src/schedule/: mod.rs  schedule.rs
src/utsz/: electricity.rs  mod.rs
