[package]
name = "rbot"
version = "0.1.0"
authors = ["E-Neo <e-neo@qq.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2.33"
console = "0.11"
futures = "0.3"
prettytable-rs = "0.8"
reqwest = { version = "0.10", features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
soup = "0.5"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
url = "2.1"
